--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,11 @@
+/* css reset */
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
 :root {
   /* colors base */
     --gray-100: #0D0E11;
@@ -27,4 +35,9 @@
 
     --text-md: 400 16px/140% var(--maven-pro);  
     --text-sm: 400 14px/140% var(--maven-pro);
+}
+
+/* global css */
+body {
+  background-color: var(--gray-100);
 }
