--- a/styles/project.css
+++ b/styles/project.css
@@ -14,3 +14,36 @@
     margin-bottom: 56px;
   }
 }
+
+#grid-projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+}
+
+.project {
+  background-color: var(--gray-300);
+  border-radius: 12px;
+  padding: 12px;
+
+  img{
+    width: 306px;
+    height: 156px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 20px;
+  }
+
+  h3 {
+    font: var(--title-sm);
+    color: var(--gray-600);
+    margin-bottom: 8px;
+    padding: 4px 4px 0;    
+  }
+
+  p {
+    font: var(--text-sm);
+    color: var(--gray-500);
+    padding: 0 4px 4px;    
+  }
+} 
