--- a/styles/project.css
+++ b/styles/project.css
@@ -16,6 +16,8 @@
 }
 
 #grid-projects {
+  max-width: 1040px;
+  margin-inline: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
@@ -23,6 +25,7 @@
 
 .project {
   background-color: var(--gray-300);
+  width: 330px;
   border-radius: 12px;
   padding: 12px;
 
@@ -35,15 +38,11 @@
   }
 
   h3 {
-    font: var(--title-sm);
-    color: var(--gray-600);
     margin-bottom: 8px;
     padding: 4px 4px 0;    
   }
 
   p {
-    font: var(--text-sm);
-    color: var(--gray-500);
     padding: 0 4px 4px;    
   }
 } 
