--- a/styles/utility.css
+++ b/styles/utility.css
@@ -8,6 +8,11 @@
   color: var(--gray-600);
 }
 
+.title-sm {
+  font: var(--title-sm);
+  color: var(--gray-600);
+}
+
 .subtitle { 
   font: var(--subtitle);
   color: var(--gray-500);
@@ -21,5 +26,10 @@
 .text-sm {
   font: var(--text-sm);
   color: var(--gray-400);
+}
+
+.text-sm-5 {
+  font: var(--text-sm);
+  color: var(--gray-500);
 }
 
